Bug 29208 - fpathconf(_PC_ASYNC_IO) is not y2038 aware
Summary: fpathconf(_PC_ASYNC_IO) is not y2038 aware
Status: RESOLVED FIXED
Alias: None
Product: glibc
Classification: Unclassified
Component: libc (show other bugs)
Version: 2.34
: P2 normal
Target Milestone: 2.36
Assignee: Adhemerval Zanella
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-05-31 15:21 UTC by Adhemerval Zanella
Modified: 2022-06-01 16:27 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Adhemerval Zanella 2022-05-31 15:21:57 UTC
It still uses non-y2038 internal interfaces:

130     case _PC_ASYNC_IO:
131 #ifdef  _POSIX_ASYNC_IO
132       {
133         /* AIO is only allowed on regular files and block devices.  */
134         struct stat64 st;
135 
136         if (__fstat64 (fd, &st) < 0
137             || (! S_ISREG (st.st_mode) && ! S_ISBLK (st.st_mode)))
138           return -1;
139         else
140           return 1;
141       }
142 #else
143       return -1;
Comment 1 Adhemerval Zanella 2022-06-01 16:27:19 UTC
Fixed on 2.36.